Fixed in CSS, text not wrapping in header for mobile view

--- a/fe-nc-news/src/App.css
+++ b/fe-nc-news/src/App.css
@@ -70,4 +70,5 @@ button {
   border-color: lightslategray;
   border-width: 10px;
   border-style: ridge;
+  overflow-wrap: break-word;
 }
